LU-8199 ptlrpc: better lut_reply_bitmap handling

Use OBD_ALLOC_LARGE instead of OBD_ALLOC to allocate chunks because of
size.  Also ensure they are free'd correctly.
Better return checking of tgt_bitmap_chunk_alloc by callers.
Check lut_reply_bitmap[chunk] is non-null in tgt_clear_reply_slot (in
case tgt_bitmap_chunk_alloc did fail).
Don't leak lut_replay_bitmap chunks if tgt_init fails.

Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: Ib222300a8c6d0032834d774cde9a9cb3830fb289
Reviewed-on: http://review.whamcloud.com/20450
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Grégoire Pichon <gregoire.pichon@bull.net>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>